src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_unsigned_does_not_allow_signed_ints.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error: Invalid type nature for generic argument. SINT is no Unsigned.
  ┌─ <internal>:3:58
  │
3 │         FUNCTION func1  : INT VAR x : SINT; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. SINT is no Unsigned.

error: Invalid type nature for generic argument. INT is no Unsigned.
  ┌─ <internal>:4:57
  │
4 │         FUNCTION func2  : INT VAR x : INT; END_VAR test(x); END_FUNCTION
  │                                                         ^ Invalid type nature for generic argument. INT is no Unsigned.

error: Invalid type nature for generic argument. DINT is no Unsigned.
  ┌─ <internal>:5:58
  │
5 │         FUNCTION func3  : INT VAR x : DINT; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. DINT is no Unsigned.

error: Invalid type nature for generic argument. LINT is no Unsigned.
  ┌─ <internal>:6:58
  │
6 │         FUNCTION func4  : INT VAR x : LINT; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. LINT is no Unsigned.


